api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: tpl
  annotations:
    networking.gke.io/managed-certificates: api
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: tpl-api
    networking.gke.io/v1beta1.FrontendConfig: "api"
spec:
  rules:
  - host: api.theprogramminglab.com
    http:
      paths:
      - path: /v1/auto-builder
        pathType: Prefix
        backend:
          service:
            name: auto-builder-ms
            port:
              number: 80
      - path: /v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-ms
            port:
              number: 80
