client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-client
  namespace: tpl
  annotations:
    networking.gke.io/managed-certificates: main-client
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: tpl-client
    networking.gke.io/v1beta1.FrontendConfig: "client"
spec:
  rules:
  - host: theprogramminglab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-client
            port:
              number: 80
